--- a/package.json
+++ b/package.json
@@ -48,13 +48,14 @@
     "jshint": "jshint --show-non-errors ."
   },
   "dependencies": {
-    "sax": "~1.2.1",
     "coa": "~1.0.1",
-    "js-yaml": "~3.6.1",
     "colors": "~1.1.2",
-    "whet.extend": "~0.9.9",
+    "csso": "~2.2.1",
+    "js-yaml": "~3.6.1",
     "mkdirp": "~0.5.1",
-    "csso": "~2.2.1"
+    "sax": "~1.2.1",
+    "universal-eol": "^0.0.2",
+    "whet.extend": "~0.9.9"
   },
   "devDependencies": {
     "mocha": "~3.1.0",
